# libmsr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: gf.h  mbr.h  msr.h
src/: arch.h  gf.c  gf.h  mbr_encode.c  msr.c  msr_encode.c
test/: benchmark.c  test.c
